5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1670_2967.log
== TEST (2019-04-16 19:07:14) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a1 > 1.37:
	print("Sim")
else: 
	print("Nao")

	print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:07:45) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a1 > 1.37:
	print("Sim")
else: 
	print("Nao")
print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:07:51) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a1 > 1.37:
	print("Sim")
else: 
	print("Nao")
print(max(a1,a2))
-- EXECUTION TIME:
0.154196
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:08:14) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a1 > 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:08:20) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a1 > 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- EXECUTION TIME:
0.157572
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:08:22) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a1 > 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:08:47) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a2 > 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:08:51) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a2 > 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- EXECUTION TIME:
0.144221
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:08:52) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a2 > 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:11) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a1,a2 > 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- ERROR:
File "XXXX", line 4
    if a1,a2 > 1.37:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:21) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a1 => 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- ERROR:
File "XXXX", line 4
    if a1 => 1.37:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:26) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a1 >= 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:09:32) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a1 >= 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- EXECUTION TIME:
0.24035
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:32) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a1 >= 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:43) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a2 >= 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:56) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a2 >= 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
	print(max(a1,a2))
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:10:02) 
-- CODE:
a1 = float(input("digite a sua altura: "))
a2 = float(input("digite a altura do seu amigo: "))

if a2 >= 1.37:
	print("Sim")
	print(max(a1,a2))
else: 
	print("Nao")
	print(max(a1,a2))
-- EXECUTION TIME:
0.185628
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
